--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       <link rel="stylesheet" href="public/styles.css" />
       <title>Document</title>
    </head>
-   <body>
+   <body class="bg-neutral-200">
       <div
-         class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 py-2 inset-x-0 top-0 justify-around font-dancing text-md transition-colors duration-300 z-50"
+         class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 py-2 inset-x-0 top-0 justify-around items-center font-dancing text-md transition-colors duration-300 z-50"
          style="
          background-image: linear-gradient(
          rgba(255, 255, 255, 0.8),
@@ -19,12 +19,12 @@
          >
          <div class="hover:font-bold">08.10.2023.</div>
          <ion-icon
-            class="text-blue-300 text-3xl hover:text-blue-600"
+            class="text-blue-300 text-xl hover:text-blue-600"
             name="heart"
             ></ion-icon>
          <div class="hover:font-bold">Inja & Luka</div>
          <ion-icon
-            class="text-blue-300 text-3xl hover:text-blue-600"
+            class="text-blue-300 text-xl hover:text-blue-600"
             name="heart"
             ></ion-icon>
          <a
@@ -35,24 +35,25 @@
          </a>
       </div>
       <div
-         class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 py-2 inset-x-0 bottom-0 justify-around align-middle font-dancing text-md transition-colors duration-300 z-50"
-         style="
-         background-image: linear-gradient(
-         rgba(255, 255, 255, 0.8),
-         rgba(255, 255, 255, 0.8)
-         ),
-         url('public/img/flowers.avif');
-         "
-         >
-         <div class="hover:font-bold">
-            Inja:0915570746
-         </div>
-         <div class="hover:font-bold">
-            Luka:0913654266
-         </div>
+      class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 py-2 inset-x-0 bottom-0 justify-around items-center font-dancing text-md transition-colors duration-300 z-50"
+      style="
+      background-image: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+      ),
+      url('public/img/flowers.avif');
+      "
+      >
+      <div class="hover:font-bold">
+         Inja:0915570746
       </div>
+      <ion-icon name="call-sharp"></ion-icon>
+      <div class="hover:font-bold">
+         Luka:0913654266
+      </div>
+   </div>
       <div
-         class="my-10 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative overflow-hidden"
+         class="my-10 p-6 xl:my-36 xl:mx-32 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative overflow-hidden"
          >
       <img
          class="rounded-xl opacity-30 h-20 absolute -top-6 -right-6 overflow-hidden"
@@ -78,7 +79,7 @@
          <div>Inja & Luka</div>
       </div>
       <div class="flex justify-center text-xl font-dancing my-3">
-         8. LISTOPADA 2023.
+         NEDJELJA, 8. LISTOPADA 2023.
       </div>
       <div class="flex justify-around items-center">
          <img
@@ -87,11 +88,11 @@
             alt=""
             />
       </div>
-      <div class="flex justify-center text-3xl border-b-2 font-dancing my-3 p-3 text-red-600">
+      <div class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600">
         <div class="animate-pulse" id="demo"></div>
       </div>
-      <div class="my-3 grid grid-cols-1 md:grid-cols-3 font-merrie text-center">
-         <div class="p-2">
+      <div class="my-3 grid grid-cols-1 lg:grid-cols-3 font-merrie text-center">
+         <div class="p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-300">
             <div class="font-bold text-lg">OKUPLJANJE</div>
             <a
                class="text-xs hover:text-blue-600"
@@ -99,19 +100,25 @@
                href="https://www.google.com/maps/place/La%C5%A1%C4%87inska+Cesta+114A,+10000,+Zagreb/@45.8304465,15.9924101,17z/data=!3m1!4b1!4m6!3m5!1s0x4765d70aa0b174b1:0x35dfd92dadb26d75!8m2!3d45.8304428!4d15.994985!16s%2Fg%2F11c228chpm?entry=ttu"
                >HERCEG REZIDENCIJA</a
                >
-            <div class="text-xs">11:00</div>
+            <div class="flex justify-center align-middle items-center text-lg">
+               <ion-icon class="px-3" name="time-outline"></ion-icon>
+               <div class="font-bold">11:00</div>
+            </div>
          </div>
-         <div class="border-y-2 md:border-y-0 md:border-x-2 p-2">
+         <div class="border-y-2 lg:border-y-0 lg:border-x-2 p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-300">
             <div class="font-bold text-lg">VJENČANJE</div>
             <a
                class="text-xs hover:text-blue-600"
                target="_blank"
                href="https://www.google.com/maps/place/Church+of+the+Immaculate+Heart+of+Mary/@45.827679,15.9980485,15z/data=!4m2!3m1!1s0x0:0xb3a995e91ecee2b0?sa=X&ved=2ahUKEwi74pn88dv_AhXiVvEDHRgWClAQ_BJ6BAhaEAg"
-               >BEZGRJEŠNO SRCE MARIJINO</a
-               >
-            <div class="text-xs">14:00</div>
+               >BEZGRJEŠNO SRCE MARIJINO
+               </a>
+               <div class="flex justify-center align-middle items-center text-lg">
+                  <ion-icon class="px-3" name="time-outline"></ion-icon>
+                  <div class="font-bold">14:00</div>
+               </div>
          </div>
-         <div class="py-2">
+         <div class="p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-300">
             <div class="font-bold text-lg">RUČAK</div>
             <a
                class="hover:text-blue-500 text-xs"
@@ -119,13 +126,16 @@
                href="https://www.google.com/maps/place/Etno+Park+Zagreb/@45.732982,15.9759896,16.25z/data=!4m5!3m4!1s0x4765d576fb166971:0xb6b78a5844fa121f!8m2!3d45.733918!4d15.975991?shorturl=1"
                >ETNO PARK ZAGREB
             </a>
-            <div class="text-xs">15:30</div>
+            <div class="flex justify-center align-middle items-center text-lg">
+               <ion-icon class="px-3" name="time-outline"></ion-icon>
+               <div class="font-bold">15:30 - 23:30</div>
+            </div>
          </div>
       </div>
-      <div class="my-3 pt-10 border-t-2 text-xl font-indie text-red-600 hover:font-bold">
+      <div class="my-3 pt-10 border-t-2 text-xl font-indie text-red-600 rounded-3xl">
          <div class="flex justify-center text-center">
             <div>
-               Molimo potvrdite svoj dolazak najkasnije do 1.9.2023.
+               Molimo potvrdite svoj dolazak najkasnije do <span class="font-semibold">1.9.2023.</span>
             </div>
          </div>
          <div class="flex justify-center">
@@ -134,12 +144,12 @@
       </div>
       <script
          type="module"
-         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-         ></script>
+         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
+      </script>
       <script
-         nomodule
-         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-         ></script>
+         type="nomodule"
+         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js">
+      </script> 
       <script src="src/script.js"></script>
    </body>
 </html>
