--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
    </div>
       <div
-         class="my-10 p-6 xl:my-36 xl:mx-32 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative overflow-hidden"
+         class="my-10 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative overflow-hidden"
          >
       <img
          class="rounded-xl opacity-30 h-20 absolute -top-6 -right-6 overflow-hidden"
@@ -83,7 +83,7 @@
       </div>
       <div class="flex justify-around items-center">
          <img
-            class="rounded-full h-40 opacity-50 hover:opacity-100 transition ease-in-out duration-300"
+            class="rounded-full max-h-40 sm:max-h-52 md:max-h-64 lg:max-h-80 xl:max-h-96 opacity-50 hover:opacity-100 transition ease-in-out duration-300"
             src="public/img/IMG_20220616_170109.jpg"
             alt=""
             />
