--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <div class="flex justify-around items-center">
          <img
-            class="rounded-full h-40 sm:h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 opacity-50 hover:opacity-100 transition ease-in-out duration-300"
+            class="rounded-full h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 opacity-50 hover:opacity-100 transition ease-in-out duration-300"
             src="public/img/IMG_20220616_170109.jpg"
             alt=""
             />
