--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
          >
          <div class="hover:font-bold">08.10.2023.</div>
          <ion-icon
-            class="text-blue-300 text-xl hover:text-blue-600"
+            class="text-blue-300 text-xl hover:text-blue-600 animate-pulse"
             name="heart"
             ></ion-icon>
          <div class="hover:font-bold">Inja & Luka</div>
          <ion-icon
-            class="text-blue-300 text-xl hover:text-blue-600"
+            class="text-blue-300 text-xl hover:text-blue-600 animate-pulse"
             name="heart"
             ></ion-icon>
          <a
@@ -82,11 +82,51 @@
          NEDJELJA, 8. LISTOPADA 2023.
       </div>
       <div class="flex justify-around items-center">
-         <img
-            class="rounded-full h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 opacity-50 hover:opacity-100 transition ease-in-out duration-300"
+         <div class="relative mySlides fade hidden">
+            <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
             src="public/img/IMG_20220616_170109.jpg"
             alt=""
             />
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 top-0 bottom-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+         </div>
+         <div class="relative mySlides fade hidden">
+            <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            src="public/img/IMG-20220625-WA0011.jpg"
+            alt=""
+            />
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+         </div>
+         <div class="relative mySlides fade hidden">
+            <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            src="public/img/IMG-20220714-WA0013.jpg"
+            alt=""
+            />
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+         </div>
+         <div class="relative mySlides fade hidden">
+            <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            src="public/img/IMG-20220930-WA0032.jpg"
+            alt=""
+            />
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+         </div>
+         <div class="relative mySlides fade hidden">
+            <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            src="public/img/MartinaIvanWeb_1048.JPG"
+            alt=""
+            />
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+         </div>
       </div>
       <div class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600">
         <div class="animate-pulse" id="demo"></div>
