--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             src="public/img/IMG_20220616_170109.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 top-0 bottom-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 top-0 bottom-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
          <div class="relative mySlides fade hidden">
             <img
@@ -97,8 +97,8 @@
             src="public/img/IMG-20220625-WA0011.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
          <div class="relative mySlides fade hidden">
             <img
@@ -106,8 +106,8 @@
             src="public/img/IMG-20220714-WA0013.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
          <div class="relative mySlides fade hidden">
             <img
@@ -115,8 +115,8 @@
             src="public/img/IMG-20220930-WA0032.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
          <div class="relative mySlides fade hidden">
             <img
@@ -124,8 +124,8 @@
             src="public/img/MartinaIvanWeb_1048.JPG"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-red-500 hover:bg-opacity-50 transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2  hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2  hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
       </div>
       <div class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600">
