--- a/index.html
+++ b/index.html
@@ -84,39 +84,39 @@
       <div class="flex justify-around items-center">
          <div class="relative mySlides fade hidden">
             <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
             src="public/img/IMG_20220616_170109.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 top-0 bottom-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 top-0 bottom-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
-         <div class="relative mySlides fade hidden">
+         <div class="relative mySlides fade hidden z-20">
             <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
             src="public/img/IMG-20220625-WA0011.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
          <div class="relative mySlides fade hidden">
             <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
             src="public/img/IMG-20220714-WA0013.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
          <div class="relative mySlides fade hidden">
             <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit"
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
             src="public/img/IMG-20220930-WA0032.jpg"
             alt=""
             />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-9 bottom-0 top-0 m-auto p-2 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
+            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
          </div>
       </div>
       <div class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600">
