--- a/index.html
+++ b/index.html
@@ -1,186 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="public/styles.css" />
-      <title>Document</title>
-   </head>
-   <body class="bg-neutral-200">
-      <div
-         class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 py-2 inset-x-0 top-0 justify-around items-center font-dancing text-md transition-colors duration-300 z-50"
-         style="
-         background-image: linear-gradient(
-         rgba(255, 255, 255, 0.8),
-         rgba(255, 255, 255, 0.8)
-         ),
-         url('public/img/flowers.avif');
-         "
-         >
-         <div class="hover:font-bold">08.10.2023.</div>
-         <ion-icon
-            class="text-blue-300 text-xl hover:text-blue-600 animate-pulse"
-            name="heart"
-            ></ion-icon>
-         <div class="hover:font-bold">Inja & Luka</div>
-         <ion-icon
-            class="text-blue-300 text-xl hover:text-blue-600 animate-pulse"
-            name="heart"
-            ></ion-icon>
-         <a
-            class="hover:text-blue-500 hover:font-bold"
-            target="_blank"
-            href="https://www.google.com/maps/place/Etno+Park+Zagreb/@45.732982,15.9759896,16.25z/data=!4m5!3m4!1s0x4765d576fb166971:0xb6b78a5844fa121f!8m2!3d45.733918!4d15.975991?shorturl=1"
-            >Etno Park Zagreb
-         </a>
-      </div>
-      <div
-      class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 py-2 inset-x-0 bottom-0 justify-around items-center font-dancing text-md transition-colors duration-300 z-50"
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/styles.css" />
+    <title>Document</title>
+  </head>
+  <body class="bg-neutral-200">
+    <div
+      class="flex fixed font-bold bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 top-0 justify-around items-center font-tangerine text-lg text-gray-700 transition-colors duration-300 z-50"
       style="
-      background-image: linear-gradient(
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.8)
-      ),
-      url('public/img/flowers.avif');
+        background-image: linear-gradient(
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0.8)
+          ),
+          url('public/img/flowers.avif');
       "
-      >
-      <div class="hover:font-bold">
-         Inja:0915570746
-      </div>
+    >
+      <div class="">8. listopada 2023.</div>
+      <ion-icon
+        class="text-blue-300 hover:text-blue-600 animate-pulse"
+        name="heart"
+      ></ion-icon>
+      <div class="">Inja & Luka</div>
+      <ion-icon
+        class="text-blue-300 hover:text-blue-600 animate-pulse"
+        name="heart"
+      ></ion-icon>
+      <a
+        class="hover:text-blue-500"
+        target="_blank"
+        href="https://www.google.com/maps/place/Etno+Park+Zagreb/@45.732982,15.9759896,16.25z/data=!4m5!3m4!1s0x4765d576fb166971:0xb6b78a5844fa121f!8m2!3d45.733918!4d15.975991?shorturl=1"
+        >Etno Park Zagreb
+      </a>
+    </div>
+    <div
+      class="flex fixed bg-cover font-bold bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-around items-center font-tangerine text-lg text-gray-700 transition-colors duration-300 z-50"
+      style="
+        background-image: linear-gradient(
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0.8)
+          ),
+          url('public/img/flowers.avif');
+      "
+    >
+      <div class="font-bold">Inja : 0915570746</div>
       <ion-icon name="call-sharp"></ion-icon>
-      <div class="hover:font-bold">
-         Luka:0913654266
+      <div class="font-bold">Luka : 0913654266</div>
+    </div>
+    <div
+      class="my-7 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative text-gray-700 overflow-hidden font-tangerine"
+    >
+      <img
+        class="rounded-xl opacity-30 h-20 absolute -top-6 -right-6 overflow-hidden"
+        src="public/img/rings.jpg"
+        alt=""
+      />
+      <img
+        class="rounded-xl opacity-30 h-20 absolute -top-6 -left-6 overflow-hidden"
+        src="public/img/rings.jpg"
+        alt=""
+      />
+      <img
+        class="rounded-xl opacity-30 h-20 absolute -bottom-6 -right-6 overflow-hidden"
+        src="public/img/rings.jpg"
+        alt=""
+      />
+      <img
+        class="rounded-xl opacity-30 h-20 absolute -bottom-6 -left-6 overflow-hidden"
+        src="public/img/rings.jpg"
+        alt=""
+      />
+      <div class="flex justify-around text-6xl my-5font-bold">
+        <div
+          class="px-5 py-2 border-b rounded-full hover:bg-neutral-200 transition-all ease-in-out hover:shadow-lg duration-500 border-red-600"
+        >
+          Inja & Luka
+        </div>
       </div>
-   </div>
-      <div
-         class="my-10 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative overflow-hidden"
-         >
-      <img
-         class="rounded-xl opacity-30 h-20 absolute -top-6 -right-6 overflow-hidden"
-         src="public/img/rings.jpg"
-         alt=""
-         />
-      <img
-         class="rounded-xl opacity-30 h-20 absolute -top-6 -left-6 overflow-hidden"
-         src="public/img/rings.jpg"
-         alt=""
-         />
-      <img
-         class="rounded-xl opacity-30 h-20 absolute -bottom-6 -right-6 overflow-hidden"
-         src="public/img/rings.jpg"
-         alt=""
-         />
-      <img
-         class="rounded-xl opacity-30 h-20 absolute -bottom-6 -left-6 overflow-hidden"
-         src="public/img/rings.jpg"
-         alt=""
-         />
-      <div class="flex justify-around text-6xl font-dancing my-5">
-         <div>Inja & Luka</div>
-      </div>
-      <div class="flex justify-center text-xl font-dancing my-3">
-         NEDJELJA, 8. LISTOPADA 2023.
+      <div class="flex justify-center text-xl my-3 font-merrie">
+        NEDJELJA, 8. LISTOPADA 2023.
       </div>
       <div class="flex justify-around items-center">
-         <div class="relative mySlides fade hidden">
-            <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
+        <div class="relative mySlides fade hidden">
+          <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl transition-all ease-in-out duration-500"
             src="public/img/IMG_20220616_170109.jpg"
             alt=""
-            />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 top-0 bottom-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
-         </div>
-         <div class="relative mySlides fade hidden z-20">
-            <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
+          />
+          <ion-icon
+            onclick="plusSlides(-1)"
+            class="text-lg rounded-lg absolute -right-7 top-0 bottom-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease duration-300"
+            name="caret-forward-outline"
+          ></ion-icon>
+          <ion-icon
+            onclick="plusSlides(1)"
+            class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-back-outline"
+          ></ion-icon>
+        </div>
+        <div class="relative mySlides fade hidden z-20">
+          <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl transition-all ease-in-out duration-500"
             src="public/img/IMG-20220625-WA0011.jpg"
             alt=""
-            />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
-         </div>
-         <div class="relative mySlides fade hidden">
-            <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
+          />
+          <ion-icon
+            onclick="plusSlides(-1)"
+            class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-forward-outline"
+          ></ion-icon>
+          <ion-icon
+            onclick="plusSlides(1)"
+            class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-back-outline"
+          ></ion-icon>
+        </div>
+        <div class="relative mySlides fade hidden">
+          <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl transition-all ease-in-out duration-500"
             src="public/img/IMG-20220714-WA0013.jpg"
             alt=""
-            />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
-         </div>
-         <div class="relative mySlides fade hidden">
-            <img
-            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl"
+          />
+          <ion-icon
+            onclick="plusSlides(-1)"
+            class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-forward-outline"
+          ></ion-icon>
+          <ion-icon
+            onclick="plusSlides(1)"
+            class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-back-outline"
+          ></ion-icon>
+        </div>
+        <div class="relative mySlides fade hidden">
+          <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl transition-all ease-in-out duration-500"
             src="public/img/IMG-20220930-WA0032.jpg"
             alt=""
-            />
-            <ion-icon onclick="plusSlides(-1)" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-forward-outline"></ion-icon>
-            <ion-icon onclick="plusSlides(1)" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="caret-back-outline"></ion-icon>
-         </div>
+          />
+          <ion-icon
+            onclick="plusSlides(-1)"
+            class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-forward-outline"
+          ></ion-icon>
+          <ion-icon
+            onclick="plusSlides(1)"
+            class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-back-outline"
+          ></ion-icon>
+        </div>
       </div>
-      <div class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600">
+      <div
+        class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600"
+      >
         <div class="animate-pulse" id="demo"></div>
       </div>
-      <div class="my-3 grid grid-cols-1 lg:grid-cols-3 font-merrie text-center">
-         <div class="p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-300">
-            <div class="font-bold text-lg">OKUPLJANJE</div>
-            <a
-               class="text-xs hover:text-blue-600"
-               target="_blank"
-               href="https://www.google.com/maps/place/La%C5%A1%C4%87inska+Cesta+114A,+10000,+Zagreb/@45.8304465,15.9924101,17z/data=!3m1!4b1!4m6!3m5!1s0x4765d70aa0b174b1:0x35dfd92dadb26d75!8m2!3d45.8304428!4d15.994985!16s%2Fg%2F11c228chpm?entry=ttu"
-               >HERCEG REZIDENCIJA</a
-               >
-            <div class="flex justify-center align-middle items-center text-lg">
-               <ion-icon class="px-3" name="time-outline"></ion-icon>
-               <div class="font-bold">11:00</div>
-            </div>
-         </div>
-         <div class="border-y-2 lg:border-y-0 lg:border-x-2 p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-300">
-            <div class="font-bold text-lg">VJENČANJE</div>
-            <a
-               class="text-xs hover:text-blue-600"
-               target="_blank"
-               href="https://www.google.com/maps/place/Church+of+the+Immaculate+Heart+of+Mary/@45.827679,15.9980485,15z/data=!4m2!3m1!1s0x0:0xb3a995e91ecee2b0?sa=X&ved=2ahUKEwi74pn88dv_AhXiVvEDHRgWClAQ_BJ6BAhaEAg"
-               >BEZGRJEŠNO SRCE MARIJINO
-               </a>
-               <div class="flex justify-center align-middle items-center text-lg">
-                  <ion-icon class="px-3" name="time-outline"></ion-icon>
-                  <div class="font-bold">14:00</div>
-               </div>
-         </div>
-         <div class="p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-300">
-            <div class="font-bold text-lg">RUČAK</div>
-            <a
-               class="hover:text-blue-500 text-xs"
-               target="_blank"
-               href="https://www.google.com/maps/place/Etno+Park+Zagreb/@45.732982,15.9759896,16.25z/data=!4m5!3m4!1s0x4765d576fb166971:0xb6b78a5844fa121f!8m2!3d45.733918!4d15.975991?shorturl=1"
-               >ETNO PARK ZAGREB
-            </a>
-            <div class="flex justify-center align-middle items-center text-lg">
-               <ion-icon class="px-3" name="time-outline"></ion-icon>
-               <div class="font-bold">15:30 - 23:30</div>
-            </div>
-         </div>
+      <div class="my-3 grid grid-cols-1 lg:grid-cols-3 text-gray-700 font-merrie text-center">
+        <div
+          class="p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-500"
+        >
+          <div class="font-bold text-lg">OKUPLJANJE</div>
+          <a
+            class="text-xs hover:text-blue-600"
+            target="_blank"
+            href="https://www.google.com/maps/place/La%C5%A1%C4%87inska+Cesta+114A,+10000,+Zagreb/@45.8304465,15.9924101,17z/data=!3m1!4b1!4m6!3m5!1s0x4765d70aa0b174b1:0x35dfd92dadb26d75!8m2!3d45.8304428!4d15.994985!16s%2Fg%2F11c228chpm?entry=ttu"
+            >HERCEG REZIDENCIJA</a
+          >
+          <div class="flex justify-center align-middle items-center text-lg">
+            <ion-icon class="px-3" name="time-outline"></ion-icon>
+            <div class="font-bold">11:00</div>
+          </div>
+        </div>
+        <div
+          class="border-y-2 lg:border-y-0 lg:border-x-2 p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-500"
+        >
+          <div class="font-bold text-lg">VJENČANJE</div>
+          <a
+            class="text-xs hover:text-blue-600"
+            target="_blank"
+            href="https://www.google.com/maps/place/Church+of+the+Immaculate+Heart+of+Mary/@45.827679,15.9980485,15z/data=!4m2!3m1!1s0x0:0xb3a995e91ecee2b0?sa=X&ved=2ahUKEwi74pn88dv_AhXiVvEDHRgWClAQ_BJ6BAhaEAg"
+            >BEZGRJEŠNO SRCE MARIJINO
+          </a>
+          <div class="flex justify-center align-middle items-center text-lg">
+            <ion-icon class="px-3" name="time-outline"></ion-icon>
+            <div class="font-bold">13:00</div>
+          </div>
+        </div>
+        <div
+          class="p-2 rounded-3xl hover:bg-neutral-200 transition ease-in-out duration-500"
+        >
+          <div class="font-bold text-lg">ZABAVA</div>
+          <a
+            class="hover:text-blue-500 text-xs"
+            target="_blank"
+            href="https://www.google.com/maps/place/Etno+Park+Zagreb/@45.732982,15.9759896,16.25z/data=!4m5!3m4!1s0x4765d576fb166971:0xb6b78a5844fa121f!8m2!3d45.733918!4d15.975991?shorturl=1"
+            >ETNO PARK ZAGREB
+          </a>
+          <div class="flex justify-center align-middle items-center text-lg">
+            <ion-icon class="px-3" name="time-outline"></ion-icon>
+            <div class="font-bold">15:00 - 00:00</div>
+          </div>
+        </div>
       </div>
-      <div class="my-3 pt-10 border-t-2 text-xl font-indie text-red-600 rounded-3xl">
-         <div class="flex justify-center text-center">
-            <div>
-               Molimo potvrdite svoj dolazak najkasnije do <span class="font-semibold">1.9.2023.</span>
-            </div>
-         </div>
-         <div class="flex justify-center">
-            <div>Veselimo se vasem dolasku!</div>
-         </div>
+    <div
+      class="my-3 pt-10 border-t-2 text-3xl font-tangerine text-red-600 rounded-3xl"
+    >
+      <div class="flex justify-center text-center">
+        <div>
+          Molimo potvrdite svoj dolazak najkasnije do
+          <span class="font-bold">1.9.2023.</span>
+        </div>
       </div>
-      <script
-         type="module"
-         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
-      </script>
-      <script
-         type="nomodule"
-         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js">
-      </script> 
-      <script src="src/script.js"></script>
-   </body>
+      <div class="flex justify-center">
+        <div>Veselimo se vasem dolasku!</div>
+      </div>
+    </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      type="nomodule"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <script src="src/script.js"></script>
+  </body>
 </html>
