--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-neutral-200">
     <div
-      class="flex fixed font-bold bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 top-0 justify-around items-center font-tangerine text-lg text-gray-700 transition-colors duration-300 z-50"
+      class="flex fixed font-bold bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 top-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
       style="
         background-image: linear-gradient(
             rgba(255, 255, 255, 0.8),
@@ -35,7 +35,7 @@
       </a>
     </div>
     <div
-      class="flex fixed bg-cover font-bold bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-around items-center font-tangerine text-lg text-gray-700 transition-colors duration-300 z-50"
+      class="flex fixed bg-cover font-bold bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
       style="
         background-image: linear-gradient(
             rgba(255, 255, 255, 0.8),
@@ -44,9 +44,9 @@
           url('public/img/flowers.avif');
       "
     >
-      <div class="font-bold">Inja : 0915570746</div>
+      <div class="font-bold">Inja : <span class="font-merrie text-xs">091/5570746</span></div>
       <ion-icon name="call-sharp"></ion-icon>
-      <div class="font-bold">Luka : 0913654266</div>
+      <div class="font-bold">Luka : <span class="font-merrie text-xs">091/3654266</span></div>
     </div>
     <div
       class="my-7 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative text-gray-700 overflow-hidden font-tangerine"
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div class="flex justify-center">
-        <div>Veselimo se vasem dolasku!</div>
+        <div>Razveselite nas svojim dolaskom!</div>
       </div>
     </div>
     <script
