--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-neutral-200">
     <div
-      class="flex fixed font-bold bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 top-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
+      class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 top-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
       style="
         background-image: linear-gradient(
             rgba(255, 255, 255, 0.8),
@@ -35,7 +35,7 @@
       </a>
     </div>
     <div
-      class="flex fixed bg-cover font-bold bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
+      class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
       style="
         background-image: linear-gradient(
             rgba(255, 255, 255, 0.8),
@@ -86,7 +86,7 @@
       <div class="flex justify-center text-xl font-merrie my-4">
         <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank">Slike</a>
       </div>
-      <div class="flex items-center justify-center text-5xl text-gray-600 mt-5 mb-10 font-tangerine">
+      <div class="flex items-center justify-center text-5xl text-gray-700 mt-5 mb-10 font-tangerine">
         Hvala vam od srca!
       </div>
       <div>
