--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
           url('public/img/flowers.avif');
       "
     >
-      <div class="font-bold">Inja : <span class="font-merrie text-xs">091/5570746</span></div>
-      <ion-icon name="call-sharp"></ion-icon>
-      <div class="font-bold">Luka : <span class="font-merrie text-xs">091/3654266</span></div>
+      <div class="flex justify-around items-center font-merrie">
+        <div>
+          <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank"><ion-icon name="images"></ion-icon></a>
+        </div>    
+      </div>
     </div>
     <div
       class="my-7 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative text-gray-700 overflow-hidden font-tangerine"
@@ -71,7 +73,7 @@
         src="public/img/rings.jpg"
         alt=""
       />
-      <div class="flex justify-around text-6xl mt-3">
+      <div class="flex justify-around text-6xl mt-1">
         <div
           class="px-5 py-2 border-b rounded-full hover:bg-neutral-200 transition-all ease-in-out hover:shadow-lg duration-500 border-red-600"
         >
