--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     >
       <div class="flex justify-around items-center font-merrie">
         <div>
-          <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank"><ion-icon name="images"></ion-icon></a>
+          Slike: 
+        </div>
+        <div>
+          <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank">__Link__</a>
         </div>    
       </div>
     </div>
@@ -82,13 +85,12 @@
       </div>
       <div class="flex items-center justify-center">
         <div class="relative">
-            <img id="slideshow" src="public/img/IMG_0970.jpg" alt="Slideshow Image" class="w-full h-auto rounded-lg">
+            <ion-icon id="downButton" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="arrow-undo"></ion-icon>
+            <img class="hover:cursor-pointer hover:shadow-2xl transition-all ease-in-out duration-500" id="slideshow" src="public/img/IMG_0970.jpg" alt="Slideshow Image" class="w-full h-auto rounded-lg">
+            <ion-icon id="upButton" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="arrow-redo"></ion-icon>
         </div>
       </div>
-      <div class="flex justify-center text-xl font-merrie my-4">
-        <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank">Slike</a>
-      </div>
-      <div class="flex items-center justify-center text-5xl text-gray-700 mt-5 mb-10 font-tangerine">
+      <div class="flex items-center justify-center text-5xl text-gray-700 mb-20 mt-16 font-tangerine">
         Hvala vam od srca!
       </div>
       <div>
